[gd_scene load_steps=13 format=2]

[ext_resource path="res://World/Trampoline.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Textures/Liane1.png" type="Texture" id=3]
[ext_resource path="res://World/Textures/log.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Spikes.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/PlayerRespawn.gd" type="Script" id=6]
[ext_resource path="res://World/Label.gd" type="Script" id=7]
[ext_resource path="res://World/ColorRect.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 8, 16, 8 )

[sub_resource type="TileSet" id=4]
0/name = "Liane1.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Liane1.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "log.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 336, 160 )
current = true

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
margin_left = -328.0
margin_top = -184.0
margin_right = 320.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.67451 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/ColorRect"]
margin_left = 248.0
margin_top = 48.0
margin_right = 416.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "You died!
Press R to respawn"
align = 1
valign = 1
uppercase = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 174.999, 328.999 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1703936, 0, 0, -1638400, 0, 0, -1638326, 0, 0, -1572864, 0, 0, -1572790, 0, 0, -1507328, 0, 0, -1507254, 0, 0, -1441792, 0, 0, -1441718, 0, 0, -1376256, 0, 0, -1376255, 2, 0, -1376182, 0, 0, -1310720, 0, 0, -1310646, 0, 0, -1245184, 0, 0, -1245110, 0, 0, -1179648, 0, 0, -1179574, 0, 0, -1114112, 0, 0, -1114038, 0, 0, -1048576, 0, 0, -1048502, 0, 0, -983040, 0, 0, -982966, 0, 0, -917504, 0, 0, -917430, 0, 0, -851968, 0, 0, -851894, 0, 0, -786432, 0, 0, -786358, 0, 0, -720896, 0, 0, -720822, 0, 0, -655360, 0, 0, -655286, 0, 0, -589824, 0, 0, -589750, 0, 0, -524288, 0, 0, -524214, 0, 0, -458752, 0, 0, -458678, 0, 0, -393216, 0, 0, -393142, 0, 0, -327680, 0, 0, -327606, 0, 0, -262144, 0, 0, -262070, 0, 0, -196608, 0, 0, -196534, 0, 0, -131072, 0, 0, -130998, 0, 0, -65536, 0, 0, -65462, 0, 0, 0, 0, 0, 74, 0, 0, 65536, 0, 0, 65610, 0, 0, 131072, 0, 0, 131146, 0, 0, 196608, 0, 0, 196682, 0, 0, 262144, 0, 0, 262218, 0, 0, 327680, 0, 0, 327754, 0, 0, 393216, 0, 0, 393236, 0, 0, 393290, 0, 0, 458752, 0, 0, 458826, 0, 0, 524288, 0, 0, 524348, 0, 0, 524362, 0, 0, 589824, 0, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589836, 3, 0, 589837, 3, 0, 589850, 3, 0, 589851, 3, 0, 589862, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589885, 0, 0, 589886, 0, 0, 589898, 0, 0, 655360, 0, 0, 655380, 0, 0, 655398, 0, 0, 655434, 0, 0, 720896, 0, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720925, 3, 0, 720926, 3, 0, 720927, 3, 0, 720928, 3, 0, 720934, 0, 0, 720970, 0, 0, 786432, 0, 0, 786473, 0, 0, 786493, 0, 0, 786494, 0, 0, 786506, 0, 0, 851968, 0, 0, 852009, 0, 0, 852026, 0, 0, 852027, 0, 0, 852028, 0, 0, 852029, 0, 0, 852042, 0, 0, 917504, 0, 0, 917526, 0, 0, 917527, 0, 0, 917531, 3, 0, 917537, 3, 0, 917538, 3, 0, 917539, 3, 0, 917540, 3, 0, 917545, 0, 0, 917578, 0, 0, 983040, 0, 0, 983091, 0, 0, 983092, 0, 0, 983093, 0, 0, 983094, 0, 0, 983095, 0, 0, 983096, 0, 0, 983114, 0, 0, 1048576, 0, 0, 1048605, 3, 0, 1048606, 3, 0, 1048607, 3, 0, 1048608, 3, 0, 1048614, 0, 0, 1048643, 0, 0, 1048644, 0, 0, 1048645, 0, 0, 1048646, 0, 0, 1048647, 0, 0, 1048648, 0, 0, 1048649, 0, 0, 1048650, 0, 0, 1114112, 0, 0, 1114150, 0, 0, 1114153, 0, 0, 1114186, 0, 0, 1179648, 0, 0, 1179656, 3, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 3, 0, 1179689, 0, 0, 1179722, 0, 0, 1245184, 0, 0, 1245217, 3, 0, 1245218, 3, 0, 1245219, 3, 0, 1245225, 0, 0, 1245241, 0, 0, 1245242, 0, 0, 1245243, 0, 0, 1245244, 0, 0, 1245245, 0, 0, 1245246, 0, 0, 1245247, 0, 0, 1245258, 0, 0, 1310720, 0, 0, 1310776, 0, 0, 1310777, 0, 0, 1310794, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1376296, 0, 0, 1376297, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376302, 0, 0, 1376303, 0, 0, 1376304, 0, 0, 1376305, 0, 0, 1376306, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1376309, 0, 0, 1376310, 0, 0, 1376311, 0, 0, 1376312, 0, 0, 1376313, 0, 0, 1376314, 0, 0, 1376315, 0, 0, 1376316, 0, 0, 1376317, 0, 0, 1376318, 0, 0, 1376319, 0, 0, 1376320, 0, 0, 1376321, 0, 0, 1376322, 0, 0, 1376323, 0, 0, 1376324, 0, 0, 1376325, 0, 0, 1376326, 0, 0, 1376327, 0, 0, 1376328, 0, 0, 1376329, 0, 0, 1376330, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1441829, 0, 0, 1441830, 0, 0, 1441831, 0, 0, 1441832, 0, 0, 1441833, 0, 0, 1441834, 0, 0, 1441835, 0, 0, 1441836, 0, 0, 1441837, 0, 0, 1441838, 0, 0, 1441839, 0, 0, 1441840, 0, 0, 1441841, 0, 0, 1441842, 0, 0, 1441843, 0, 0, 1441844, 0, 0, 1441845, 0, 0, 1441846, 0, 0, 1441847, 0, 0, 1441848, 0, 0, 1441849, 0, 0, 1441850, 0, 0, 1441851, 0, 0, 1441852, 0, 0, 1441853, 0, 0, 1441854, 0, 0, 1441855, 0, 0, 1441856, 0, 0, 1441857, 0, 0, 1441858, 0, 0, 1441859, 0, 0, 1441860, 0, 0, 1441861, 0, 0, 1441862, 0, 0, 1441863, 0, 0, 1441864, 0, 0, 1441865, 0, 0, 1441866, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507366, 0, 0, 1507367, 0, 0, 1507368, 0, 0, 1507369, 0, 0, 1507370, 0, 0, 1507371, 0, 0, 1507372, 0, 0, 1507373, 0, 0, 1507374, 0, 0, 1507375, 0, 0, 1507376, 0, 0, 1507377, 0, 0, 1507378, 0, 0, 1507379, 0, 0, 1507380, 0, 0, 1507381, 0, 0, 1507382, 0, 0, 1507383, 0, 0, 1507384, 0, 0, 1507385, 0, 0, 1507386, 0, 0, 1507387, 0, 0, 1507388, 0, 0, 1507389, 0, 0, 1507390, 0, 0, 1507391, 0, 0, 1507392, 0, 0, 1507393, 0, 0, 1507394, 0, 0, 1507395, 0, 0, 1507396, 0, 0, 1507397, 0, 0, 1507398, 0, 0, 1507399, 0, 0, 1507400, 0, 0, 1507401, 0, 0, 1507402, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1572914, 0, 0, 1572915, 0, 0, 1572916, 0, 0, 1572917, 0, 0, 1572918, 0, 0, 1572919, 0, 0, 1572920, 0, 0, 1572921, 0, 0, 1572922, 0, 0, 1572923, 0, 0, 1572924, 0, 0, 1572925, 0, 0, 1572926, 0, 0, 1572927, 0, 0, 1572928, 0, 0, 1572929, 0, 0, 1572930, 0, 0, 1572931, 0, 0, 1572932, 0, 0, 1572933, 0, 0, 1572934, 0, 0, 1572935, 0, 0, 1572936, 0, 0, 1572937, 0, 0, 1572938, 0, 0, 1638400, 0, 0, 1638401, 0, 0, 1638402, 0, 0, 1638403, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1638406, 0, 0, 1638407, 0, 0, 1638408, 0, 0, 1638409, 0, 0, 1638410, 0, 0, 1638411, 0, 0, 1638412, 0, 0, 1638413, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638419, 0, 0, 1638420, 0, 0, 1638421, 0, 0, 1638422, 0, 0, 1638423, 0, 0, 1638424, 0, 0, 1638425, 0, 0, 1638426, 0, 0, 1638427, 0, 0, 1638428, 0, 0, 1638429, 0, 0, 1638430, 0, 0, 1638431, 0, 0, 1638432, 0, 0, 1638433, 0, 0, 1638434, 0, 0, 1638435, 0, 0, 1638436, 0, 0, 1638437, 0, 0, 1638438, 0, 0, 1638439, 0, 0, 1638440, 0, 0, 1638441, 0, 0, 1638442, 0, 0, 1638443, 0, 0, 1638444, 0, 0, 1638445, 0, 0, 1638446, 0, 0, 1638447, 0, 0, 1638448, 0, 0, 1638449, 0, 0, 1638450, 0, 0, 1638451, 0, 0, 1638452, 0, 0, 1638453, 0, 0, 1638454, 0, 0, 1638455, 0, 0, 1638456, 0, 0, 1638457, 0, 0, 1638458, 0, 0, 1638459, 0, 0, 1638460, 0, 0, 1638461, 0, 0, 1638462, 0, 0, 1638463, 0, 0, 1638464, 0, 0, 1638465, 0, 0, 1638466, 0, 0, 1638467, 0, 0, 1638468, 0, 0, 1638469, 0, 0, 1638470, 0, 0, 1638471, 0, 0, 1638472, 0, 0, 1638473, 0, 0, 1638474, 0, 0 )

[node name="Spikes" type="Node2D" parent="."]

[node name="Spikes3" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 184 )
rotation = 1.5708

[node name="Spikes27" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 328, 192 )
rotation = -3.14159

[node name="Spikes23" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 352, 120 )
rotation = 1.5708

[node name="Spikes24" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 352, 136 )
rotation = 1.5708

[node name="Spikes25" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 352, 168 )
rotation = 1.5708

[node name="Spikes26" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 352, 152 )
rotation = 1.5708

[node name="Spikes4" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 200 )
rotation = 1.5708

[node name="Spikes5" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 216 )
rotation = 1.5708

[node name="Spikes6" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 232 )
rotation = 1.5708

[node name="Spikes7" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 248 )
rotation = 1.5708

[node name="Spikes8" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 264 )
rotation = 1.5708

[node name="Spikes9" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 280 )
rotation = 1.5708

[node name="Spikes12" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 360, 216 )
rotation = -1.5708

[node name="Spikes20" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 360, 120 )
rotation = -1.5708

[node name="Spikes21" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 360, 136 )
rotation = -1.5708

[node name="Spikes22" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 360, 152 )
rotation = -1.5708

[node name="Spikes17" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 360, 168 )
rotation = -1.5708

[node name="Spikes18" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 360, 184 )
rotation = -1.5708

[node name="Spikes19" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 360, 200 )
rotation = -1.5708

[node name="Spikes13" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 232 )
rotation = -1.5708

[node name="Spikes14" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 248 )
rotation = -1.5708

[node name="Spikes15" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 264 )
rotation = -1.5708

[node name="Spikes16" parent="Spikes" instance=ExtResource( 5 )]
position = Vector2( 336, 280 )
rotation = -1.5708

[node name="Trampolines" type="Node2D" parent="."]

[node name="Trampoline" parent="Trampolines" instance=ExtResource( 1 )]
position = Vector2( 336, 328 )

[node name="Trampoline2" parent="Trampolines" instance=ExtResource( 1 )]
position = Vector2( 360, 216 )
[connection signal="player_died" from="." to="Camera2D/ColorRect" method="_on_World_player_died"]
[connection signal="player_died" from="." to="Camera2D/ColorRect/Label" method="_on_World_player_died"]
[connection signal="player_respawned" from="." to="Camera2D/ColorRect" method="_on_World_player_respawned"]
[connection signal="player_respawned" from="." to="Camera2D/ColorRect/Label" method="_on_World_player_respawned"]
[connection signal="tree_exiting" from="Player" to="." method="_on_Player_tree_exiting"]
